(mostly) finished 1st draft!

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -49,7 +49,7 @@
 \newacronym{CSU}{CSU}{Colarado State University}
 \newacronym{RAL}{RAL}{Rutherford Appleton Laboratory}
 \newacronym{DAQ}{DAQ}{data acquisition system}
-\newacronym{OAP}{OAP}{off-axis parabolic mirror}
+\newacronym{OAP}{OAP}{off-axis paraboloid mirror}
 \newacronym{HDF5}{HDF5}{Hierarchical Data Format 5}
 \newacronym{EPICS}{EPICS}{Experimental Physics and Industrial Control System}
 \newacronym{GUI}{GUI}{graphical user interface}
@@ -59,3 +59,4 @@
 \newacronym{EPPS}{EPPS}{Electron Positron Proton Spectrometer}
 \newacronym{CPA}{CPA}{chirped pulse amplification}
 \newacronym{HHG}{HHG}{high-harmonic generation}
+\newacronym{RCF}{RCF}{radio-chromic film}
