--- a/chap2.tex
+++ b/chap2.tex
@@ -239,7 +239,7 @@ A typical Ti:Sapphire laser has a wavelength of $\SI{0.8}{\micro \meter}$ which 
 
 \subsubsection{Resonance Absorption}
 
-The discussion in \autoref{sec:criticaldensity} applied to an electric field directed in the x-direction. For gaussian laser beams, the electric field is always perpendicular to the direction of propagation. So, if the laser beam is to be directed toward a target at $x = 0$, normal incidence would imply that the electric field $E_x = 0$. Additionally, an s-polarized beam would have an electric field only in the z direction. As a result, the typical model of a laser beam depositing energy into a plasma involves a p-polarized laser beam traveling obliquely in the $x-y$ plane with some angle of incidence $\theta_i$ measured with respect to the normal direction of the target. Physically, plasma oscillations occur through fluctuations in density which are going to be the strongest in the x direction due to the interface between vacuum and matter.
+The discussion in \autoref{sec:critical_density} applied to an electric field directed in the x-direction. For gaussian laser beams, the electric field is always perpendicular to the direction of propagation. So, if the laser beam is to be directed toward a target at $x = 0$, normal incidence would imply that the electric field $E_x = 0$. Additionally, an s-polarized beam would have an electric field only in the z direction. As a result, the typical model of a laser beam depositing energy into a plasma involves a p-polarized laser beam traveling obliquely in the $x-y$ plane with some angle of incidence $\theta_i$ measured with respect to the normal direction of the target. Physically, plasma oscillations occur through fluctuations in density which are going to be the strongest in the x direction due to the interface between vacuum and matter.
 
 Kruer \cite{Kruer_2003_Plasma} argues that the reflection of light at oblique incidence occurs at a density $n_e = n_c \cos^2(\theta_i)$ by enforcing momentum conservation of the electric field component in the $y$ direction. Even though we've discussed density profile as an abrupt step (from 0 to $n_e$ from crossing $x = 0$), an actual experiment would see some pre-heating of the target before the target becomes ionized and behaves as a mirror at the critical density. This can be characterized by some scale length $L_p \equiv n_e (\frac{\partial n_e}{\partial x})^{-1}$ which is smaller for steeper density profiles. As a result, at higher incidence angles, the evanescent portion of the electric field has to travel further into the underdense region of the target to reach the critical density. 
 
