--- a/chap7.tex
+++ b/chap7.tex
@@ -1,5 +1,13 @@
 \chapter{Conclusion} \label{ch:7}
 
-\section{Summary}
+In \autoref{ch:1}, I discussed the features of chirped-pulse lasers that enabled the creation of ultra-intense laser systems used today. When used to accelerate ions from flat targets, these lasers have a multitude of applications including cancer therapy, radiography, and materials characterization. The relevant plasma physics necessary to understand these laser-matter interactions was reviewed in \autoref{ch:2} which includes the primary effect studied in this work: target normal sheath acceleration. In \autoref{ch:3}, I explained the basics of particle-in-cell codes and machine learning which were the computational techniques used in this work. 
 
-\section{Future Work}
+In \autoref{ch:4}, I summarized the existing literature on using multiple pulses to improve the target normal sheath acceleration mechanism. In particular, I highlighted two works \cite{Rahman_2021_PoP, Ferri_2019_Nat_Comm} which simulated two femtosecond pulses of equal energy that arrive at the same location and time to enhance accelerated proton beams (in comparison to one pulse with the same total energy). I conducted similar simulations based on the longer, picosecond scale Titan laser at Lawrence Livermore National Laboratory. These simulations were done to complement the experiment that our research group conducted early in 2024 and yielded similar qualitative and quantitative results.
+
+In \autoref{ch:5}, I explained my main contribution to the research group during my PhD studies: studying machine learning models through the use of synthetic proton acceleration data. I reviewed the relevant physics in the datasets which includes \emph{plasma expansion into a vacuum} \cite{Mora_2003_PRL} and the Fuchs et al. model \cite{Fuchs_2005_Nat} which are partly based on empirical estimates from prior experiments. I detailed the synthetic datasets with some additional modifications to account for target pre-expansion due to an artificially injected pre-pulse. Then in two projects, I explored various machine learning models in their ability to accurately fit the synthetic data. These projects primarily showed that neural networks have the potential to be useful models for large, complex datasets. Their strengths lie in being resilient to noise, their ability to update with new data (via transfer learning), and their capability to leverage GPU computations. However, when faced with a limited amount of data, gaussian processes are preferred due to their uncertainty measure that can help suggest new points to explore. Synthetic data offers an alternative to computationally expensive particle-in-cell simulation data which can be a useful tool to prototype future machine learning frameworks in this field.
+
+In \autoref{ch:6}, I overview the experimental laser facility at the Wright-Patterson Air Force Base for which \autoref{ch:5} was based on. I described my contribution to the project: a graphical user interface that automatically processed data from the lab and suggested new laser parameters to explore based on certain criteria like maximum kinetic energy and total electron counts. Operating at 1 kHz, this system is capable of collecting around 3 orders of magnitude more data points than many other modern 1 Hz \emph{high} repetition-rate system that have been used in recent years \cite{Streeter_2025_Nat,Treffert_2022_APL}. This makes it particularly suitable for utilizing machine learning models like neural networks optimized for complex data. I demonstrated at the lab with my code that this type of optimization is possible, but the narrow region of parameter space that produced a good proton signal limited the applicability of my work. 
+
+While future laser facilities will be able to more readily access higher intensities that utilize radiation pressure acceleration mechanisms \cite{Macchi_2013_RevModPhys}, target normal sheath acceleration will continue to remain relevant for some time due to high repetition-rated systems that can produce vast quantities of data at a lower intensity. Continuously refreshing targets created from liquid micro-jets (like the one at Wright-Patt \cite{George_2019_HPLSE}) are getting better at supporting higher acquisition rates \cite{Treffert_2022_APL, Streeter_2025_Nat} which will allow scientists to leverage data to understand physical processes not yet understood from theory. I am proud to have contributed insights to the field of laser-driven proton acceleration by studying the double pulse enhanced target normal sheath acceleration mechanism, constructing synthetic datasets to understand what sorts of optimizations are possible, and realizing a basic optimization feedback loop. 
+
+To expand on this work, one could try to develop a more comprehensive theory for the double pulse enhancement that justifies its implementation in the lab. After target stability improvements and data acquisition advancements, different laser and target properties (including the double pulse setup) could be varied to collect many data points. This could be used for machine learning efforts to not only better understand target normal sheath acceleration, but tune parameters to drive higher quality proton beams of a desired energy and angular spread. Due to recent advances in both machine learning and repetition-rated targetry, I am optimistic that future efforts will enable laser-plasma accelerators to be a viable alternative to conventional proton (and other types of radiation) accelerators to realize medical and scientific applications. 
