--- a/optimization.bib
+++ b/optimization.bib
@@ -36,6 +36,15 @@
 	pages={e35}
 }
 
+@article{Streeter_2025_Nat,
+	title={Stable laser-acceleraetion of high-flux proton beams with plasma collimation}, 
+	volume = {16}, 
+	DOI={10.1038/s41467-025-56248-4}, 
+	journal={Nature Communications}, 
+	author={Streeter, M. J. V. and et al.},
+	year={2025}
+}
+
 @article{Schmitz_2023_LaPB, 
 	title={Modeling of a Liquid Leaf Target TNSA Experiment Using Particle-In-Cell Simulations and Deep Learning}, 
 	volume={2023}, 
