--- a/chap1.tex
+++ b/chap1.tex
@@ -1,4 +1,4 @@
-\chapter{Introduction}
+\chapter{Introduction} \label{ch:1}
 This chapter introduces ultra-intense lasers, gives applications of laser-accelerated protons, and presents an outline of the topics in this work.
 
 \section{Lasers} \label{sec:lasers}
